--- a/index.html
+++ b/index.html
@@ -10,29 +10,37 @@
   <body>
     <header class="heading">COLORANDOM</header>
     <main class="main-page">
-      <article class="full-palette">
-        <section class="color-one">
-          <p class="square-one"></p>
-          <p class="hex-one">#111111</p>
-        </section>
-        <section class="color-two">
-          <p class="square-two"></p>
-          <p class="hex-two">#222222</p>
-        </section>
-        <section class="color-three">
-          <p class="square-three"></p>
-          <p class="hex-three">#333333</p>
-        </section>
-        <section class="color-four">
-          <p class="square-four"></p>
-          <p class="hex-four">#444444</p>
-        </section>
-        <section class="color-five">
-          <p class="square-five"></p>
-          <p class="hex-five">#555555</p>
-        </section>
-      </article>
+      <section class="color-palette">
+        <div class="color">
+          <p id="color-one" class="square"></p>
+          <p class="hex">#111111</p>
+          <img></img>
+        </div>
+        <div class="color">
+          <p id="color-two" class="square"></p>
+          <p class="hex">#222222</p>
+        </div>
+        <div class="color">
+          <p id="color-three" class="square"></p>
+          <p class="hex">#333333</p>
+        </div>
+        <div class="color">
+          <p id="color-four" class="square"></p>
+          <p class="hex">#444444</p>
+        </div>
+        <div class="color">
+          <p id="color-five" class="square"></p>
+          <p class="hex">#555555</p>
+        </div>
+      </section>
+      <section class="side-content">
+        <h1 class="saved-header">Saved Palettes</h1>
+      </section>
     </main>
+    <section class="buttons">
+      <h3 class="new-palette">New Palette</h3>
+      <h3 class="save-palette">Save Palette</h3>
+    </section>
 	<script src="main.js"></script>
   </body>
 </html>
