--- a/index.html
+++ b/index.html
@@ -13,28 +13,34 @@
       <section class="color-palette">
         <div class="color">
           <p id="color-one" class="square"></p>
-          <p class="hex">#111111</p>
-          <img></img>
+          <p id="hex-one"class="hex">#111111</p>
+          <img src="https://cdn-icons.flaticon.com/png/512/798/premium/798131.png?token=exp=1645727742~hmac=a64a60b84a6148d0caa2dbe36f1f3538" alt="unlocked">
         </div>
         <div class="color">
           <p id="color-two" class="square"></p>
-          <p class="hex">#222222</p>
+          <p id="hex-two"class="hex">#222222</p>
+          <img src="https://cdn-icons.flaticon.com/png/512/798/premium/798131.png?token=exp=1645727742~hmac=a64a60b84a6148d0caa2dbe36f1f3538" alt="unlocked">
         </div>
         <div class="color">
           <p id="color-three" class="square"></p>
-          <p class="hex">#333333</p>
+          <p id="hex-three"class="hex">#333333</p>
+          <img src="https://cdn-icons.flaticon.com/png/512/798/premium/798131.png?token=exp=1645727742~hmac=a64a60b84a6148d0caa2dbe36f1f3538" alt="unlocked">
         </div>
         <div class="color">
           <p id="color-four" class="square"></p>
-          <p class="hex">#444444</p>
+          <p id="hex-four"class="hex">#444444</p>
+          <img src="https://cdn-icons.flaticon.com/png/512/798/premium/798131.png?token=exp=1645727742~hmac=a64a60b84a6148d0caa2dbe36f1f3538" alt="unlocked">
         </div>
         <div class="color">
           <p id="color-five" class="square"></p>
-          <p class="hex">#555555</p>
+          <p id="hex-five"class="hex">#555555</p>
+          <img src="https://cdn-icons.flaticon.com/png/512/798/premium/798131.png?token=exp=1645727742~hmac=a64a60b84a6148d0caa2dbe36f1f3538" alt="unlocked">
         </div>
       </section>
       <section class="side-content">
         <h1 class="saved-header">Saved Palettes</h1>
+         <div class="mini-square">
+        </div>
       </section>
     </main>
     <section class="buttons">
