Adjust CSS for saved Pallets and add HTML interpolation

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </div>
       </section>
       <section class="side-content">
-        <h1 class="saved-header">Saved Palettes</h1>
-         <div class="mini-square">
+        <div class = "test">
+          <h1 class="saved-header">Saved Palettes</h1>
+          <div class="mini-square">
+          </div>
         </div>
       </section>
     </main>
