Make final refactoring edits

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <main class="main-page">
       <section class="color-palette">
         <div class="color">
-          <p id="color-one" class="square"></p>
-          <p id="hex-one" class="hex"></p>
+          <p class="square"></p>
+          <p class="hex"></p>
           <img class="lock-image hidden" src="./assets/padlock.png" alt="locked">
           <img class="unlock-image" src="./assets/unlock-padlock.png" alt="unlocked">
         </div>
         <div class="color">
-          <p id="color-two" class="square"></p>
-          <p id="hex-two" class="hex"></p>
+          <p class="square"></p>
+          <p class="hex"></p>
           <img class="lock-image hidden" src="./assets/padlock.png" alt="locked">
           <img class="unlock-image" src="./assets/unlock-padlock.png" alt="unlocked">
         </div>
         <div class="color">
-          <p id="color-three" class="square"></p>
-          <p id="hex-three" class="hex"></p>
+          <p class="square"></p>
+          <p class="hex"></p>
           <img class="lock-image hidden" src="./assets/padlock.png" alt="locked">
           <img class="unlock-image" src="./assets/unlock-padlock.png" alt="unlocked">
         </div>
         <div class="color">
-          <p id="color-four" class="square"></p>
-          <p id="hex-four"class="hex"></p>
+          <p class="square"></p>
+          <p class="hex"></p>
           <img class="lock-image hidden" src="./assets/padlock.png" alt="locked">
           <img class="unlock-image"src="./assets/unlock-padlock.png" alt="unlocked">
         </div>
         <div class="color">
-          <p id="color-five" class="square"></p>
-          <p id="hex-five"class="hex"></p>
+          <p class="square"></p>
+          <p class="hex"></p>
           <img class="lock-image hidden" src="./assets/padlock.png" alt="locked">
           <img class="unlock-image" src="./assets/unlock-padlock.png" alt="unlocked">
         </div>
