--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </section>
       <section class="side-content">
-        <div class = "test">
+        <div class = "side-section-flex">
           <h1 class="saved-header">Saved Palettes</h1>
           <div class="mini-square">
           </div>
@@ -51,8 +51,8 @@
       </section>
     </main>
     <section class="buttons">
-      <h3 class="new-palette">New Palette</h3>
-      <h3 class="save-palette">Save Palette</h3>
+      <button class="new-palette">New Palette</button>
+      <button class="save-palette">Save Palette</button>
     </section>
 	<script src="main.js"></script>
   <script src="palette.js"></script>
